force-app/main/default/objects/Channel_Partner__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Broker - New</fullName>
            </value>
            <value>
                <fullName>International Broker - Old</fullName>
            </value>
            <value>
                <fullName>Broker - UAE</fullName>
            </value>
            <value>
                <fullName>Broker - Intnl</fullName>
            </value>
            <value>
                <fullName>Broker - RERA</fullName>
            </value>
            <value>
                <fullName>Broker - China</fullName>
                <isActive>false</isActive>
                <label>Broker - China</label>
            </value>
            <value>
                <fullName>Broker - India</fullName>
                <isActive>false</isActive>
                <label>Broker - India</label>
            </value>
            <value>
                <fullName>Broker - Intl</fullName>
                <isActive>false</isActive>
                <label>Broker - Intl</label>
            </value>
            <value>
                <fullName>Broker - KSA</fullName>
                <isActive>false</isActive>
                <label>Broker - KSA</label>
            </value>
            <value>
                <fullName>Broker - Others</fullName>
                <isActive>false</isActive>
                <label>Broker - Others</label>
            </value>
            <value>
                <fullName>Broker - UK</fullName>
                <isActive>false</isActive>
                <label>Broker - UK</label>
            </value>
            <value>
                <fullName>SC - China</fullName>
                <isActive>false</isActive>
                <label>SC - China</label>
            </value>
            <value>
                <fullName>SC - India</fullName>
                <isActive>false</isActive>
                <label>SC - India</label>
            </value>
            <value>
                <fullName>SC - KSA</fullName>
                <isActive>false</isActive>
                <label>SC - KSA</label>
            </value>
            <value>
                <fullName>SC - Others</fullName>
                <isActive>false</isActive>
                <label>SC - Others</label>
            </value>
            <value>
                <fullName>SC - UAE</fullName>
                <isActive>false</isActive>
                <label>SC - UAE</label>
            </value>
            <value>
                <fullName>SC - UK</fullName>
                <isActive>false</isActive>
                <label>SC - UK</label>
            </value>
            <value>
                <fullName>Sobha Connect - Intl</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect - Intl</label>
            </value>
            <value>
                <fullName>Sobha Connect - UAE</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect - UAE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>