force-app/main/default/objects/Channel_Partner__c/fields/Channel_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Id__c</fullName>
    <displayFormat>CP - {0000}</displayFormat>
    <externalId>true</externalId>
    <label>Channel Partner Id</label>
    <type>AutoNumber</type>
</CustomField>