force-app/main/default/objects/Channel_Partner__c/fields/Channel_Relationship_Head__c.field-meta.xml
<CustomField>
    <fullName>Channel_Relationship_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Relations Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partners3</relationshipName>
    <type>Lookup</type>
</CustomField>