force-app/main/default/objects/Channel_Partner__c/fields/Channel_Relationship_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Relationship_Manager_Name__c</fullName>
    <formula>Channel_Relationship_Manager__r.FirstName + &apos; &apos; + Channel_Relationship_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Relationship Manager Name</label>
    <type>Text</type>
</CustomField>