force-app/main/default/objects/Channel_Partner__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Hunghom</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Safat</fullName>
            </value>
            <value>
                <fullName>Samara City</fullName>
            </value>
            <value>
                <fullName>Chelyabinsk</fullName>
            </value>
            <value>
                <fullName>Vladivostok</fullName>
            </value>
            <value>
                <fullName>St Petersburg</fullName>
            </value>
            <value>
                <fullName>Moscow</fullName>
            </value>
            <value>
                <fullName>Limassol</fullName>
            </value>
            <value>
                <fullName>Germasogia</fullName>
            </value>
            <value>
                <fullName>Janabiya</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Pershino</fullName>
            </value>
            <value>
                <fullName>Donu</fullName>
            </value>
            <value>
                <fullName>Stuttgart</fullName>
            </value>
            <value>
                <fullName>Dammam</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Kyiv</fullName>
            </value>
            <value>
                <fullName>Lagos</fullName>
            </value>
            <value>
                <fullName>Jurmala</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
            <value>
                <fullName>Stockholm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>