force-app/main/default/objects/Channel_Partner__c/fields/Created_From_SC__c.field-meta.xml
<CustomField>
    <fullName>Created_From_SC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From SC</label>
    <type>Checkbox</type>
</CustomField>