force-app/main/default/objects/Channel_Partner__c/fields/Email_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_2__c</fullName>
    <label>Email ID 2</label>
    <type>Email</type>
</CustomField>