force-app/main/default/objects/Channel_Partner__c/fields/Emergency_Created_ID__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Created_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Created ID</label>
    <type>Checkbox</type>
</CustomField>