force-app/main/default/objects/Channel_Partner__c/fields/Geography_Manager__c.field-meta.xml
<CustomField>
    <fullName>Geography_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geography Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partners4</relationshipName>
    <type>Lookup</type>
</CustomField>