force-app/main/default/objects/Channel_Partner__c/fields/Last_Year_Business__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Business__c</fullName>
    <label>Last Year Business Closed(Approximately)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>