force-app/main/default/objects/Channel_Partner__c/fields/Mandate_Status__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Status__c</fullName>
    <label>Mandate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandate Sent through DocuSign</fullName>
            </value>
            <value>
                <fullName>Mandate executed</fullName>
            </value>
            <value>
                <fullName>Mandate voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>