force-app/main/default/objects/Channel_Partner__c/fields/New_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Partner__c</fullName>
    <formula>HYPERLINK(&quot;https://cs58.salesforce.com/a07/e?retURL=%2Fa07%3Ffcf%3D00B0l000000Qde0&amp;_CONFIRMATIONTOKEN=VmpFPSxNakF4TnkweE1TMHpNRlF4TVRveE16bzFNaTQyTkRkYSxHMzBmNHM0a0RIY3N2eGNQYVhDWC1lLE5UVTFPREps&amp;common.udd.actions.ActionsUtilORIG_URI=%2Fa07%2Fe&quot;, &quot;New Channel Partner&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Channel Partner</label>
    <type>Text</type>
</CustomField>