force-app/main/default/objects/Channel_Partner__c/fields/No_of_Open_Houses__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Houses__c</fullName>
    <label>No.of Open Houses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>