force-app/main/default/objects/Channel_Partner__c/fields/Owners_Name__c.field-meta.xml
<CustomField>
    <fullName>Owners_Name__c</fullName>
    <label>Owner&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>