force-app/main/default/objects/Channel_Partner__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Registration/Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>