force-app/main/default/objects/Channel_Partner__c/fields/Qualified_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Sales_Value__c</fullName>
    <label>Qualified Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>