force-app/main/default/objects/Channel_Partner__c/fields/Renewal_New_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Renewal_New_Expiry__c</fullName>
    <label>Renewal - New Expiry</label>
    <type>Date</type>
</CustomField>