force-app/main/default/objects/Channel_Partner__c/fields/Sales_Manager_s_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_s_Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager&apos;s Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>