force-app/main/default/objects/Channel_Partner__c/fields/Sent_To_Broker__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent_To_Broker</label>
    <type>Checkbox</type>
</CustomField>