force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Channel_Partner_Id__c</columns>
    <columns>NAME</columns>
    <columns>Mobile_No__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Channel_Relationship_Manager__c</columns>
    <columns>RERA_Registration_No__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>