force-app/main/default/objects/Channel_Partner__c/listViews/My_Team_CP_s_List.listView-meta.xml
<ListView>
    <fullName>My_Team_CP_s_List</fullName>
    <columns>Channel_Partner_Id__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Channel_Relationship_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel_Relationship_Manager__c</field>
        <operation>equals</operation>
        <value>Parth Pradeep Gaglani,Rita Taher Yahia,Varun Khanna,Ashok Yadav</value>
    </filters>
    <label>My Team CP&apos;s List</label>
    <sharedTo>
        <role>Head_Digital_Marketing</role>
    </sharedTo>
</ListView>